--- a/CadastroPessoasApp/MainWindow.xaml
+++ b/CadastroPessoasApp/MainWindow.xaml
@@ -168,10 +168,17 @@
                 <Button x:Name="ButtonSave" Content="Save" Height="30" Width="80" Command="{Binding SaveCommand}">
                     <!--<Button.Style>
                         <Style TargetType="Button">
+                            <Setter Property="IsEnabled" Value="False"/>
                             <Style.Triggers>
-                                <DataTrigger Binding="{Binding ElementName=TextBoxName, Path=(Validation.HasError)}" Value="True">
-                                    <Setter Property="IsEnabled" Value="False" />
-                                </DataTrigger>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding Path=(Validation.HasError), ElementName=textBoxNome}" Value="False"/>
+                                        <Condition Binding="{Binding Path=(Validation.HasError), ElementName=textBoxSobrenome}" Value="False"/>
+                                        <Condition Binding="{Binding Path=(Validation.HasError), ElementName=textBoxCpf}" Value="False"/>
+                                        <Condition Binding="{Binding Path=(Validation.HasError), ElementName=textBoxNascimento}" Value="False"/>
+                                    </MultiDataTrigger.Conditions>
+                                    <Setter Property="IsEnabled" Value="True"/>
+                                </MultiDataTrigger>
                             </Style.Triggers>
                         </Style>
                     </Button.Style>-->
